[metadata]
name = ape
version = attr: rf_auto.__version__
description = Ardupilot pid envaluation tool
long_description = file: README.rst, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
zip_safe = False
packages = find:

[options.packages.find]
exclude =
  tests
  rf_auto/__pycache__

[options.entry_points]
console_scripts =
  ape-pid-envaluation = rf_auto.flight_control:main
